--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "babel src --out-dir lib --presets es2015,stage-0,react --plugin lodash",
     "clean": "rimraf lib",
-    "pub": "npm run clean && npm run build && npm version patch && npm publish && rm -rf lib && git push origin"
+    "pub": "npm run clean && npm run build && npm version patch && npm publish && rm -rf lib && git push origin",
+    "start": "bisheng start"
   },
   "repository": {
     "type": "git",
@@ -44,6 +45,11 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
+    "bisheng": "^0.19.0",
+    "bisheng-plugin-description": "^0.1.1",
+    "bisheng-plugin-react": "^0.4.2",
+    "bisheng-plugin-toc": "^0.4.0",
+    "react-document-title": "^2.0.2",
     "rimraf": "^2.5.4"
   },
   "peerDependencies": {
