--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "lib/index.js",
   "jsnext:main": "src/index.js",
   "scripts": {
-    "build": "babel src --out-dir lib --presets es2015,stage-0,react --plugin lodash",
+    "build": "babel src --out-dir lib --presets es2015,stage-0,react",
     "clean": "rimraf lib",
     "pub": "npm run clean && npm run build && npm version patch && npm publish && rm -rf lib && git push origin",
     "start": "bisheng start"
@@ -41,7 +41,6 @@
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-plugin-lodash": "^3.2.11",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
