*replaced url-pattern with path-to-regexp +moved path related logic into separate class Path that exposed and can be used outside

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "dependencies": {
     "invariant": "2.x",
     "lodash": "4.x",
-    "url-pattern": "1.0.x"
+    "path-to-regexp": "1.7.x"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
